IsoSec/IsoSecParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from IsoSec.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class IsoSecParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		WS=10, EndLine=11, LPar=12, RPar=13, LSBra=14, RSBra=15, RetOp=16, NewOp=17, 
		IncOp=18, DecOp=19, PowerOp=20, PlusOp=21, MinusOp=22, ModOp=23, TimesOp=24, 
		DivOp=25, LBSOp=26, RBSOp=27, LEOp=28, GEOp=29, LessOp=30, GreatOp=31, 
		EqualOp=32, NEqualOp=33, AssignOp=34, LAndOp=35, LOrOp=36, LNotOp=37, 
		BAndOp=38, BXOrOp=39, BOrOp=40, BNotOp=41, DotOp=42, Comma=43, Float=44, 
		Double=45, Int=46, Bool=47, Char=48, String=49, Name=50, All=51, BlockComment=52, 
		LineComment=53;
	public const int
		RULE_program = 0, RULE_typeName = 1, RULE_funcDeclaration = 2, RULE_declararionArgs = 3, 
		RULE_line = 4, RULE_decLine = 5, RULE_stat = 6, RULE_compName = 7, RULE_declarationBase = 8, 
		RULE_declaration = 9, RULE_ctrlStruct = 10, RULE_ifElse = 11, RULE_else = 12, 
		RULE_exp = 13, RULE_compVar = 14, RULE_atom = 15, RULE_atomVar = 16, RULE_var = 17, 
		RULE_func = 18, RULE_args = 19, RULE_const = 20, RULE_newObj = 21;
	public static readonly string[] ruleNames = {
		"program", "typeName", "funcDeclaration", "declararionArgs", "line", "decLine", 
		"stat", "compName", "declarationBase", "declaration", "ctrlStruct", "ifElse", 
		"else", "exp", "compVar", "atom", "atomVar", "var", "func", "args", "const", 
		"newObj"
	};

	private static readonly string[] _LiteralNames = {
		null, "'?'", "'function'", "'end'", "'if'", "'then'", "'while'", "'do'", 
		"'for'", "'else'", null, "';'", "'('", "')'", "'['", "']'", "'return'", 
		"'create'", "'++'", "'--'", "'pow'", "'+'", "'-'", "'mod'", "'*'", "'/'", 
		"'<<'", "'>>'", "'<='", "'>='", "'<'", "'>'", "'=='", "'!='", "'='", "'&&'", 
		"'||'", "'!'", "'&'", "'^'", "'|'", "'~'", "'.'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "WS", "EndLine", 
		"LPar", "RPar", "LSBra", "RSBra", "RetOp", "NewOp", "IncOp", "DecOp", 
		"PowerOp", "PlusOp", "MinusOp", "ModOp", "TimesOp", "DivOp", "LBSOp", 
		"RBSOp", "LEOp", "GEOp", "LessOp", "GreatOp", "EqualOp", "NEqualOp", "AssignOp", 
		"LAndOp", "LOrOp", "LNotOp", "BAndOp", "BXOrOp", "BOrOp", "BNotOp", "DotOp", 
		"Comma", "Float", "Double", "Int", "Bool", "Char", "String", "Name", "All", 
		"BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IsoSec.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static IsoSecParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IsoSecParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IsoSecParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext[] funcDeclaration() {
			return GetRuleContexts<FuncDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclarationContext funcDeclaration(int i) {
			return GetRuleContext<FuncDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DecLineContext[] decLine() {
			return GetRuleContexts<DecLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DecLineContext decLine(int i) {
			return GetRuleContext<DecLineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Name) {
				{
				State = 46;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 44;
					funcDeclaration();
					}
					break;
				case 2:
					{
					State = 45;
					decLine();
					}
					break;
				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CompNameContext compName() {
			return GetRuleContext<CompNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LessOp() { return GetToken(IsoSecParser.LessOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext[] typeName() {
			return GetRuleContexts<TypeNameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName(int i) {
			return GetRuleContext<TypeNameContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GreatOp() { return GetToken(IsoSecParser.GreatOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LSBra() { return GetToken(IsoSecParser.LSBra, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RSBra() { return GetToken(IsoSecParser.RSBra, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(IsoSecParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(IsoSecParser.Comma, i);
		}
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_typeName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			compName(0);
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LessOp) {
				{
				State = 52;
				Match(LessOp);
				State = 53;
				typeName();
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==Comma) {
					{
					{
					State = 54;
					Match(Comma);
					State = 55;
					typeName();
					}
					}
					State = 60;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 61;
				Match(GreatOp);
				}
			}

			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LSBra) {
				{
				State = 65;
				Match(LSBra);
				State = 66;
				Match(RSBra);
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 69;
				Match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDeclarationContext : ParserRuleContext {
		public TypeNameContext type;
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPar() { return GetToken(IsoSecParser.LPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPar() { return GetToken(IsoSecParser.RPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Name() { return GetToken(IsoSecParser.Name, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclararionArgsContext declararionArgs() {
			return GetRuleContext<DeclararionArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public FuncDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDeclarationContext funcDeclaration() {
		FuncDeclarationContext _localctx = new FuncDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_funcDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			_localctx.type = typeName();
			State = 73;
			Match(T__1);
			State = 74;
			_localctx.name = Match(Name);
			State = 75;
			Match(LPar);
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Name) {
				{
				State = 76;
				declararionArgs();
				}
			}

			State = 79;
			Match(RPar);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2236544095031760L) != 0)) {
				{
				{
				State = 80;
				line();
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 86;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclararionArgsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma() { return GetToken(IsoSecParser.Comma, 0); }
		public DeclararionArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declararionArgs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclararionArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclararionArgsContext declararionArgs() {
		DeclararionArgsContext _localctx = new DeclararionArgsContext(Context, State);
		EnterRule(_localctx, 6, RULE_declararionArgs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			declaration();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Comma) {
				{
				State = 89;
				Match(Comma);
				State = 90;
				declaration();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatContext lstat;
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EndLine() { return GetToken(IsoSecParser.EndLine, 0); }
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 8, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			_localctx.lstat = stat();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EndLine) {
				{
				State = 94;
				Match(EndLine);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecLineContext : ParserRuleContext {
		public DeclarationContext dec;
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EndLine() { return GetToken(IsoSecParser.EndLine, 0); }
		public DecLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecLineContext decLine() {
		DecLineContext _localctx = new DecLineContext(Context, State);
		EnterRule(_localctx, 10, RULE_decLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			_localctx.dec = declaration();
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EndLine) {
				{
				State = 98;
				Match(EndLine);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DecStatContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public DecStatContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CtrlStatContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public CtrlStructContext ctrlStruct() {
			return GetRuleContext<CtrlStructContext>(0);
		}
		public CtrlStatContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCtrlStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReturnStatContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RetOp() { return GetToken(IsoSecParser.RetOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ReturnStatContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExpStatContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ExpStatContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 12, RULE_stat);
		try {
			State = 106;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				_localctx = new ReturnStatContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 101;
				Match(RetOp);
				State = 102;
				exp(0);
				}
				break;
			case 2:
				_localctx = new DecStatContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				declaration();
				}
				break;
			case 3:
				_localctx = new CtrlStatContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 104;
				ctrlStruct();
				}
				break;
			case 4:
				_localctx = new ExpStatContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 105;
				exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Name() { return GetToken(IsoSecParser.Name, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CompNameContext compName() {
			return GetRuleContext<CompNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DotOp() { return GetToken(IsoSecParser.DotOp, 0); }
		public CompNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompNameContext compName() {
		return compName(0);
	}

	private CompNameContext compName(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		CompNameContext _localctx = new CompNameContext(Context, _parentState);
		CompNameContext _prevctx = _localctx;
		int _startState = 14;
		EnterRecursionRule(_localctx, 14, RULE_compName, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 109;
			Match(Name);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 116;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CompNameContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_compName);
					State = 111;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 112;
					Match(DotOp);
					State = 113;
					Match(Name);
					}
					} 
				}
				State = 118;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class DeclarationBaseContext : ParserRuleContext {
		public TypeNameContext type;
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Name() { return GetToken(IsoSecParser.Name, 0); }
		public DeclarationBaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarationBase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarationBase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationBaseContext declarationBase() {
		DeclarationBaseContext _localctx = new DeclarationBaseContext(Context, State);
		EnterRule(_localctx, 16, RULE_declarationBase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			_localctx.type = typeName();
			State = 120;
			_localctx.name = Match(Name);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public DeclarationBaseContext baseDec;
		public ExpContext value;
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationBaseContext declarationBase() {
			return GetRuleContext<DeclarationBaseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AssignOp() { return GetToken(IsoSecParser.AssignOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsoSecVisitor<TResult> typedVisitor = visitor as IIsoSecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 18, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			_localctx.baseDec = declarationBase();
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AssignOp) {
				{
				State = 123;
				Match(AssignOp);
				State = 124;
				_localctx.value = exp(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
